--- a/src/components/calculator/calculator.component.html
+++ b/src/components/calculator/calculator.component.html
@@ -1,14 +1,14 @@
+<div *ngIf="answered"> El resultado es:</div>
 <div class="maindisplay">
 	<div class="subdisplay">{{ subText }}</div>
 	{{ mainText }}
 </div>
 <div class="keypad">
-	<div class="keys ackey one-line" (click)="allClear()">AC</div>
-	<div class="keys opkey one-line" (click)="pressKey('/')">/</div>
+	<div class="keys opkey one-line" (click)="pressKey('/')">÷</div>
 	<div class="keys numkey one-line" (click)="pressKey('7')">7</div>
 	<div class="keys numkey one-line" (click)="pressKey('8')">8</div>
 	<div class="keys numkey one-line" (click)="pressKey('9')">9</div>
-	<div class="keys opkey one-line" (click)="pressKey('x')">x</div>
+	<div class="keys opkey one-line" (click)="pressKey('x')">×</div>
 	<div class="keys numkey one-line" (click)="pressKey('4')">4</div>
 	<div class="keys numkey one-line" (click)="pressKey('5')">5</div>
 	<div class="keys numkey one-line" (click)="pressKey('6')">6</div>
@@ -20,4 +20,5 @@
 	<div class="keys numkey zerokey one-line" (click)="pressKey('0')">0</div>
 	<div class="keys numkey one-line" (click)="pressKey('.')">.</div>
 	<div class="keys equalkey one-line" (click)="getAnswer()">=</div>
+	<div class="keys ackey one-line" (click)="allClear()">AC</div>
 </div>
